Add LFS tracking for large files

--- a/templates/project-wallsend.html
+++ b/templates/project-wallsend.html
@@ -96,7 +96,9 @@
                                     <th class="px-6 py-4 font-bold">Location</th>
                                     <th class="px-6 py-4 font-bold">Use Case</th>
                                     <th class="px-6 py-4 font-bold">Size</th>
-                                </tr>
+                                </tr>git remote add origin https://github.com/karthickpm01/Build-Planet-Zero.git
+git branch -M main
+git push -u origin main
                             </thead>
                             <tbody class="divide-y divide-slate-100">
                                 <tr>
