--- a/templates/index.html
+++ b/templates/index.html
@@ -282,7 +282,7 @@
              class="absolute inset-0 w-full h-full object-cover transition-opacity duration-1000 opacity-0 slide" alt="Solar Panels">
         <img src="/static/westend2.png"
              class="absolute inset-0 w-full h-full object-cover transition-opacity duration-1000 opacity-0 slide" alt="Nature Build">
-        <img src="/static/westend3.png"
+        <img src="/static/westend3.jpg"
              class="absolute inset-0 w-full h-full object-cover transition-opacity duration-1000 opacity-0 slide" alt="Nature Build">
     </div>
 
